--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-    "builds": [
-      {
-        "src": "frontend/index.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "frontend/index.html"
-      }
-    ]
-  }
-  
+  "rootDirectory": "frontend",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "framework": "vite"
+}
